# OpenMicStream

./: .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/openmicstream/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/openmicstream/: MainActivity.kt  OpenMicStreamApplication.kt
app/src/main/java/com/example/openmicstream/audio/: AudioEngine.kt
app/src/main/java/com/example/openmicstream/data/: SettingsRepository.kt
app/src/main/java/com/example/openmicstream/service/: AudioService.kt  AudioServiceManager.kt  AudioServiceState.kt
app/src/main/java/com/example/openmicstream/ui/main/: MainScreen.kt  MainViewModel.kt
app/src/main/java/com/example/openmicstream/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/openmicstream/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
